# linter

./: .gitignore  AGENTS.md  cache.py  cli.py  constants.py  errors.py  lint.py  linter.py  main.py  models.py  pyproject.toml  reproduce.py  reproduce_issue.sh  test_bug.sh  verify_fixes.py
cli/: __init__.py
cli/commands/: __init__.py  base.py  cache.py  check.py  lint.py  list.py  list_codes.py  rebuild.py
errors/: __init__.py  base.py  std000.py  std001.py  std002.py  std003.py  std004.py
exceptions/: base.py  empty_cache.py
formatters/: __init__.py  base.py  json_formatter.py  text_formatter.py  vscode_formatter.py
rules/: __init__.py  base.py  invalid_function.py  invalid_namespace.py  namespace_as_function.py  namespace_call.py  unknown_call.py  valid_function.py
src/: __init__.py  cache.py  constants.py  linter.py  main.py  mock_manager.py  mock_scanner.py
src/cli/: __init__.py
src/errors/: __init__.py  base.py  std000.py  std001.py  std002.py  std003.py  std004.py  std005.py  std006.py  std007.py  std008.py  std009.py
src/example/: shlex.py
src/exceptions/: empty_cache.py
src/formatters/: __init__.py  base.py  json_formatter.py  text_formatter.py  vscode_formatter.py
src/functions/: scope.py
src/issues/: __init__.py  base.py  enum.py
src/linter/: __init__.py  discovery_pipeline.py  enhanced_shlex.py  linter.py  scope.py  state.py  (+1 more)
stdlib_html/: fetcher.py  parser.py
tests/: my_test.sh  test_cache.py  test_cache_command.py  test_check_command.py  test_cli.py  test_errors.py  test_exceptions.py  test_html_fetcher.py  test_html_parser.py  test_is_function_call_validator.py  test_json_formatter.py  test_lint.py  test_lint_command.py  test_linter.py  test_list_codes_command.py  test_list_command.py  test_models.py  test_not_namespace_call_validator.py  test_rebuild_command.py  test_rules.py  test_std000.py  test_std001.py  test_std002.py  test_std003.py  test_std004.py  test_text_formatter.py  test_validator_base.py  test_vscode_formatter.py
validators/: base.py  is_function_call.py  not_namespace_call.py
(+204 files in other folders)
